--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -43,7 +43,7 @@
 			width: 100%;
 			background-color: $white;
       padding: 0;
-      margin: 0;
+      margin: 0 2%;
 			}
 				
 		/* Settings for breakpoints */
@@ -81,3 +81,10 @@
         display: block;
       }
     }
+		
+		@media (max-width: $small) {
+			div.content {
+				width: 97%;
+				padding: 1%;
+				}
+		}
